--- a/css/tiles.css
+++ b/css/tiles.css
@@ -27,18 +27,32 @@
 }
 
 /* tileTitleText */
-.title{
+.title {
 	margin:3px 3px 0 10px;
 	padding: 0px;
 	font-size: 30px;
 	font-weight:500;
 }
-.desc{
+.desc {
 	margin: 0 12px 0 12px;
 	padding: 0;
 	font-size: 13px;
 	position:absolute;
-	
+}
+.tileEdit {
+	transition: opacity 0.5s;
+	-o-transition: opacity 0.5s;
+	-moz-transition: opacity 0.5s;
+	-webkit-transition: opacity 0.5s;
+
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	margin: 5px;
+	opacity: 0;
+}
+.tileEdit:hover {
+	opacity: 0.9;
 }
 
 /*Image Slider Tile */
