--- a/css/tiles.css
+++ b/css/tiles.css
@@ -47,7 +47,7 @@
 
 	position: absolute;
 	top: 5px;
-	right: 5px;
+	right: 0;
 	margin: 5px;
 	opacity: 0;
 }
@@ -142,6 +142,15 @@ background: -o-linear-gradient(-45deg,  #cf0404 0%,#ff8075 99%); /* Opera 11.10+
 background: -ms-linear-gradient(-45deg,  #cf0404 0%,#ff8075 99%); /* IE10+ */
 background: linear-gradient(135deg,  #cf0404 0%,#ff8075 99%); /* W3C */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cf0404', endColorstr='#ff8075',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.yellowTile{
+background: #f6ff0d; /* Old browsers */
+background: -moz-linear-gradient(-45deg,  #f6ff0d 0%, #f0ff4c 99%); /* FF3.6+ */
+background: -webkit-linear-gradient(-45deg,  #f6ff0d 0%,#f0ff4c 99%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(-45deg,  #f6ff0d 0%,#f0ff4c 99%); /* Opera 11.10+ */
+background: -ms-linear-gradient(-45deg,  #f6ff0d 0%,#f0ff4c 99%); /* IE10+ */
+background: linear-gradient(135deg,  #f6ff0d 0%,#f0ff4c 99%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6ff0d', endColorstr='#f0ff4c',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 .alignRight{
